Bug 453823 - [Wayland] Mouse pointer disappears after applying a change in Screen Edges KCM
Summary: [Wayland] Mouse pointer disappears after applying a change in Screen Edges KCM
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-05-15 12:25 UTC by Patrick Silva
Modified: 2022-05-18 11:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-05-15 12:25:35 UTC
STEPS TO REPRODUCE
1. use Wayland session
2. open Screen Edges KCM
3. choose another action to the upper left corner - I chose 'Desktop Grid'
4. click on 'Apply' button and do NOT move the mouse pointer

OBSERVED RESULT
mouse pointer disappears after the last step. It reappears when I move my finger on the touchpad.

EXPECTED RESULT
mouse pointer should not disappear after changing settings

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.24.80
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-05-16 16:34:59 UTC
Can reproduce.
Comment 2 Bug Janitor Service 2022-05-18 09:14:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2420
Comment 3 Zamundaaa 2022-05-18 11:13:45 UTC
Git commit b0b551653f7ed6c1790b49bd279f16a1df31524f by Xaver Hugl.
Committed on 18/05/2022 at 11:00.
Pushed by zamundaaa into branch 'master'.

backends/drm: update cursor after compositing reset

Otherwise the cursor won't be shown, as its buffer and layer got destroyed

M  +3    -0    src/backends/drm/drm_gpu.cpp
M  +2    -2    src/backends/drm/drm_output.h

https://invent.kde.org/plasma/kwin/commit/b0b551653f7ed6c1790b49bd279f16a1df31524f