backends/drm: update cursor after compositing reset

Otherwise the cursor won't be shown, as its buffer and layer got destroyed

BUG: 453823